[build-system]
requires = ["setuptools>=61.0", "torch"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "flashinfer-vx"
dynamic = ["version"]
description = "Vision extension kernels for FlashInfer"
readme = {text = "This package contains extra CUDA kernels (cubins) for FlashInfer. It provides an extra single_prefill runner specialized for vision / diffusion tasks.", content-type = "text/plain"}
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "FlashInfer team"},
]
maintainers = [
    {name = "FlashInfer team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/flashinfer-ai/flashinfer"
Documentation = "https://github.com/flashinfer-ai/flashinfer"
Repository = "https://github.com/flashinfer-ai/flashinfer"
"Issue Tracker" = "https://github.com/flashinfer-ai/flashinfer/issues"

[tool.setuptools]
packages = ["flashinfer_vx"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "flashinfer_vx.__version__"}

[tool.setuptools.package-data]
flashinfer_vx = ["cubin/*", "*.so", "_build_meta.py"]
